🐛  correccion de algunos bugs
